# croon

./: .gitignore  AppAudioPlayer.h  AppIdentity.cpp  AppIdentity.h  AppPaths.cpp  AudioPlayer.h  AudioPlayerBase.h  AzLyricsProvider.cpp  CMakeLists.txt  Config.cpp  Config.h  ConfigService.cpp  Constants.h  ConvertDlg.cpp  Croon.cpp  Croon.h  Croon.lay  Croon.upp  CroonMainWindow.lay  CroonTimingDlg.lay  CroonVideoDlg.lay  CroonWizardShell.lay  DownloadDefaults.cpp  DownloadDefaults.h  DownloadDlg.cpp  DownloadDlg.h  ExportDlg.cpp  ExportDlg.h  ExportQuality.h  Ffmpeg.h  FfmpegAudioCommandBuilder.cpp  FfmpegAudioCommandBuilder.h  FfmpegCommandBuilder.h  FfmpegExportCommandBuilder.cpp  FfmpegExportCommandBuilder.h  FfmpegProgressParser.cpp  FfmpegProgressParser.h  FfmpegProjectCommandBuilder.cpp  FfmpegProjectCommandBuilder.h  FfmpegSubtitleProbeCommandBuilder.cpp  (+104 more)
tests/: validate_cmake_umk_contract.py  validate_core_contracts.py  validate_editor_layouts.py  validate_export_audit.py  validate_identity.py  validate_process_contracts.py  validate_simple_layouts.py  validate_wizard_layouts.py
tests/upp/CroonCoreTests/: CroonAssTestSupport.cpp  CroonCoreTestSupport.cpp  CroonCoreTests.cpp  CroonCoreTests.upp  CroonLyricsTestSupport.cpp
tests/upp/CroonCoreTests/fixtures/: current-project-metadata.json  invalid-project-metadata.json
